# LinearActuator-ColorDetection

./: .gitignore  LICENSE  README.md
ros_ws/src/linear-actuator_description/: CMakeLists.txt  LICENSE.txt  README.txt  package.xml
ros_ws/src/linear-actuator_description/files/: Actuator_ES80.STEP
ros_ws/src/linear-actuator_description/urdf/: rrbot.urdf  rrbot.xacro  servo - original.xacro  servo.gazebo  servo.urdf  servo.xacro  servo_parameters.xacro
ros_ws/src/linear-actuator_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/linear-actuator_gazebo/launch/: linear-actuator.launch
ros_ws/src/linear-actuator_gazebo/worlds/: linear-actuator.world  linear-actuator2.sdf
